[package]
name = "sv-explorer"
version = "0.1.0"
edition = "2024"

[lib]
path = "sv-explorer/src/lib.rs"

[[bin]]
path = "sv-explorer/src/main.rs"
name = "sv-explorer"


[workspace]
members = ["sv-explorer-args"]
resolver = "3"

[dependencies]
sv-parser = "0.13.3"
sv-explorer-args = { path = "./sv-explorer-args/"}

